[package]
name = "tok4jbindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = ["cdylib"]
name = "tok4jbindings"

[dependencies]
jni = "0.21.1"
jni_fn = "0.1.2"
thiserror = "1.0.49"
tokenizers = "0.14.0"
